2008-03-27  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        <rdar://problem/5826236> Regular expressions with large nested repetition counts can have their
        compiled length calculated incorrectly.

        * pcre/pcre_compile.cpp:
        (multiplyWithOverflowCheck):
        (calculateCompiledPatternLength): Check for overflow when dealing with nested repetition counts
        and bail with an error rather than returning incorrect results.

2008-03-26  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Brady Eidson.

        Update FEATURE_DEFINES to be consistent with the other locations in which it is defined.

        * Configurations/JavaScriptCore.xcconfig:

2008-03-26  Adam Roben  <aroben@apple.com>

        Fix Bug 18060: Assertion failure (JSLock not held) beneath
        JSCallbackObject<Base>::toString

        <http://bugs.webkit.org/show_bug.cgi?id=18060>

        Reviewed by Geoff Garen.

        Bug fix:

        * API/JSCallbackObjectFunctions.h:
        (KJS::JSCallbackObject<Base>::toString): Make the DropAllLocks
        instance only be in scope while calling convertToType.

        Test:

        * API/testapi.c:
        (MyObject_convertToType): Implement type conversion to string.
        * API/testapi.js: Add a test for type conversion to string.

2008-03-26  Adam Roben  <aroben@apple.com>

        Windows build fix

        * kjs/array_instance.cpp: Touched this.
        * wtf/HashFunctions.h:
        (WTF::intHash): Added 8- and 16-bit versions of intHash.

2008-03-26  Adam Roben  <aroben@apple.com>

        Force JSC headers to be copied by touching a file

        * kjs/array_instance.cpp:
        (KJS::ArrayInstance::getPropertyNames):

2008-03-26  Adam Roben  <aroben@apple.com>

        Windows build fix after r31324

        Written with Darin.

        Added HashTable plumbing to support using wchar_t as a key type.

        * wtf/HashFunctions.h:
        * wtf/HashTraits.h:
        (WTF::):
