@@ -43,6 +43,7 @@ class wxString;
 namespace WebCore {
 
 class CString;
+class SharedBuffer;
 struct StringHash;
 
 class String {
@@ -298,6 +299,8 @@ inline void append(Vector<UChar>& vector, const String& string)
 {
     vector.append(string.characters(), string.length());
 }
+
+PassRefPtr<SharedBuffer> utf8Buffer(const String&);
 
 } // namespace WebCore
 
