@@ -1,3 +1,12 @@
+2008-03-28  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Darin
+
+        Export Unicode/UTF8.h and convertUTF16ToUTF8() for more flexible conversion in WebCore
+
+        * JavaScriptCore.exp:
+        * JavaScriptCore.xcodeproj/project.pbxproj:
+
 2008-03-27  Darin Adler  <darin@apple.com>
 
         Reviewed by Mark Rowe.
